--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -128,7 +128,7 @@
 
 		if (showDrop)
 		{
-			Html.RenderPartial("Product.Item.Drop", Model);
+			Html.RenderPartial("Product.List.Item.Drop", Model);
 		}
 	}
 </article>
