--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -6,48 +6,72 @@
 
 @import '~/.app/themevars.scss';
 
-$enable-flex:               true;
-$enable-rounded:            true;
-$enable-shadows:            true;
-$enable-gradients:          false;
-$enable-transitions:        true;
-$enable-hover-media-query:  false; 
-$enable-grid-classes:       true;
+$enable-flex:                   true;
+$enable-rounded:                true;
+$enable-shadows:                true;
+$enable-gradients:              false;
+$enable-transitions:            true;
+$enable-hover-media-query:      false; 
+$enable-grid-classes:           true;
 
-$body-color:                #333;
+$body-color:                    #333;
 
-$headings-line-height:      1.3;
+$headings-line-height:          1.3;
 
 /*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
-$font-family-sans-serif:    'Open Sans', sans-serif;
+$font-family-sans-serif:        'Open Sans', sans-serif;
 
-$font-size-base:            .925rem;
-$line-height:                1.8;
-$line-height-sm:             1.8;
-$line-height-lg:             1.5;
+$font-size-base:                .925rem;
+$line-height:                   1.8;
+$line-height-sm:                1.8;
+$line-height-lg:                1.5;
 
-$display1-size:             6rem;
-$display2-size:             5.5rem;
-$display3-size:             4.5rem;
-$display4-size:             3.5rem;
+$display1-size:                 6rem;
+$display2-size:                 5.5rem;
+$display3-size:                 4.5rem;
+$display4-size:                 3.5rem;
 
-$border-radius:             3px;
-$border-radius-lg:          4px; 
-$border-radius-sm:          2px;
+$border-radius:                 3px;
+$border-radius-lg:              4px; 
+$border-radius-sm:              2px;
 
-$btn-border-radius:         2px !default;
-$btn-border-radius-lg:      3px !default;
-$btn-border-radius-sm:      2px !default;
+$btn-border-radius:             2px !default;
+$btn-border-radius-lg:          3px !default;
+$btn-border-radius-sm:          2px !default;
 
-$btn-font-weight:           600;
+$btn-font-weight:               600;
 /*$btn-padding-x:             1.8rem;
 $btn-padding-x-sm:          1.2rem;
 $btn-padding-x-lg:          2rem;*/
-$btn-padding-y-lg:          1rem;
+$btn-padding-y-lg:              1rem;
 
 /*$dropdown-border-color:     #ddd;
 $popover-border-color:      #ddd;
 $card-border-color:         rgba(0,0,0, 0.12);*/
+
+// Pagination
+
+$pagination-padding-x:          12px;
+$pagination-padding-y:          2px;
+$pagination-padding-x-sm:       8px;
+$pagination-padding-y-sm:       0;
+$pagination-padding-x-lg:       16px;
+$pagination-padding-y-lg:       4px;
+
+
+$pagination-color:              $body-color;
+$pagination-bg:                 transparent;
+$pagination-border-width:       1px;
+$pagination-border-color:       #ddd;
+
+$pagination-hover-color:        $pagination-color;
+$pagination-hover-bg:           rgba(0,0,0, 0.06);
+$pagination-hover-border:       #ddd;
+
+$pagination-active-color:       $pagination-color;
+$pagination-active-bg:          transparent;
+$pagination-active-border:      $pagination-border-color;
+
 
 // Pre Bootstrap
 @import "shared/_spacers.scss"; 
@@ -111,35 +135,48 @@ body {
     position: relative;
     z-index: 1;
     background: $body-bg;
-} 
-
-.pagination-xs {
-    .page-link {
-        line-height: 1.4;
-        font-size: $font-size-xs;
-        padding: 0.25rem 0.5rem;
-    }
-
-    .shrinked .page-link {
-        padding-left: 0.3rem;
-        padding-right: 0.3rem;
-    }
 }
 
 .page-title {
     margin-bottom: 1.5rem;
 }
 
-.page-link {
-    text-decoration: none !important;
-}
 
-.shrinked .page-link {
-    background: transparent;
-    border-top-color: transparent;
-    border-bottom-color: transparent;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+.pagination {
+    .page-nav {
+        background-color: #fff;
+        &:hover { background-color: $pagination-hover-bg; }
+        &:first-of-type { margin-right: 0.25rem; }
+        &:last-of-type { margin-left: 0.25rem; }
+    }
+
+    .page-link {
+        border-radius: 2px !important;
+        margin-left: 0;
+        text-decoration: none !important;
+    }
+
+    .shrinked .page-link {
+        padding-left: 2px;
+        padding-right: 2px;
+        background-color: transparent !important;
+    }
+
+    .page-link:not(.page-nav) {
+        border-color: transparent !important;
+    }
+
+    .active .page-link {
+        font-weight: bold;
+    }
+
+    &.pagination-xs {
+        .page-link {
+            line-height: 1.4;
+            font-size: $font-size-xs;
+            padding: 0 6px;
+        }
+    }
 }
 
 
