--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
@@ -59,6 +59,9 @@
 			}
 		</div>
 
+		@* TODO: (mc) find more intelligent way of rendering RecentlyViewedProductsBlock globally *@
+		@{ Html.RenderAction("RecentlyViewedProductsBlock", "Catalog", new { area = "" }); }
+
         @Html.Widget("manufacturerdetails_bottom")
     </div>
 </div>
