--- a/src/Presentation/SmartStore.Web/Views/Home/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/Index.cshtml
@@ -14,6 +14,8 @@
 			Html.RenderAction("HomepageBestSellers", "Catalog");
 			Html.RenderAction("HomePageNews", "News");
 			Html.RenderAction("HomePagePolls", "Poll");
+			@* TODO: (mc) find more intelligent way of rendering RecentlyViewedProductsBlock globally *@
+			Html.RenderAction("RecentlyViewedProductsBlock", "Catalog", new { area = "" });
 		}
         @Html.Widget("home_page_bottom")
     </div>
