--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_ColumnsTwo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_ColumnsTwo.cshtml
@@ -17,16 +17,13 @@
 	{
         @Html.Widget("left_side_column_before")
 
-        { Html.RenderAction("CategoryNavigation", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId, area = "" }); }
+        Html.RenderAction("CategoryNavigation", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId, area = "" });
         @Html.Widget("left_side_column_after_category_navigation")
 
-        { Html.RenderAction("ManufacturerNavigation", "Catalog", new { currentManufacturerId = this.CurrentManufacturerId, area = "" }); }
+        Html.RenderAction("ManufacturerNavigation", "Catalog", new { currentManufacturerId = this.CurrentManufacturerId, area = "" });
         @Html.Widget("left_side_column_after_manufacturer_navigation")
 
-        { Html.RenderAction("RecentlyViewedProductsBlock", "Catalog", new { area = "" }); }
-        @Html.Widget("left_side_column_after_recentlyviewed")
-
-        { Html.RenderAction("PollBlock", "Poll", new { systemKeyword = "RightColumnPoll", area = "" }); }
+        Html.RenderAction("PollBlock", "Poll", new { systemKeyword = "RightColumnPoll", area = "" });
         @Html.Widget("left_side_column_after_poll")
 
         @Html.Widget("left_side_column_after")
