--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/RelatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/RelatedProducts.cshtml
@@ -1,31 +1,43 @@
-﻿@model IList<ProductOverviewModel>
-@using SmartStore.Web.Models.Catalog;
-@if (Model.Count > 0)
-{   
-    <div class="block related-products">
-        <div class="block-title">
-            <h3>@T("Products.RelatedProducts")</h3>
-        </div>
-        <div class="block-body">
-            <div class="product-list scroll">
-                <div class="pl-row row">
-                @foreach (var item in Model)
-                {
-                    <article class="item-box card card-block card-shadow equalized-column" data-equalized-deep="true">
-                        @{ Html.RenderPartial("_ProductBoxCompact", item); }
-                    </article>
-                }
-                </div>
+﻿@model ProductSummaryModel
 
-                <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
-		        <a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
-            </div>
+@using SmartStore.Web.Models.Catalog;
+
+@{ 
+	if (!Model.Items.Any())
+	{
+		return;
+	}
+}
+ 
+<div class="block related-products">
+    <div class="block-title">
+        <h3>@T("Products.RelatedProducts")</h3>
+    </div>
+    <div class="block-body">
+        <div class="product-list scroll">
+			@* TODO: (mc) Must be carousel/slider *@
+			@{ Html.RenderPartial("Product.List", Model); }
         </div>
     </div>
+</div>
     
-    <script type="text/javascript">
-        $(function () {
-            $(".related-products .product-list.scroll").productListScroller();
-        });
-    </script>
-}
+<script type="text/javascript">
+    $(function () {
+        $(".related-products .product-list.scroll").productListScroller();
+    });
+</script>
+
+
+@*<div class="product-list scroll">
+	<div class="pl-row row">
+		@foreach (var item in Model.Items)
+		{
+			<article class="item-box card card-block card-shadow equalized-column" data-equalized-deep="true">
+				@{ Html.RenderPartial("_ProductBoxCompact", item); }
+			</article>
+					}
+	</div>
+
+	<a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
+	<a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
+</div>*@
