--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
@@ -67,8 +67,7 @@
 
 .menubar-link {
     display: inline-block;
-    //float: left;
-    font-size: 80%;
+    font-size: $font-size-xs;
     color: #666;
     padding: 1em 0.6em;
     text-decoration: none !important;
@@ -85,19 +84,6 @@
     .menubar-link {
         color: #000;
     }
-}
-
-
-//
-// Megamenu (TODO: move later)
-// --------------------------------------------------
-
-.megamenu .nav-link {
-    font-weight: 600;
-}
-
-.navbar-light .megamenu .navbar-nav .nav-link {
-    color: $body-color;
 }
 
 
@@ -154,15 +140,15 @@
     .shopbar-button-icon {
         margin-bottom: 0;
         > i {
-            font-size: 1.6rem;
-            line-height: 1.6rem;
+            font-size: 2rem;
+            line-height: 2rem;
             color: $body-color;
         }
         > .label {
 		    position: absolute; 
 		    right: -3px; 
 		    top: -3px;
-            font-size: 0.7rem; 
+            font-size: 0.65rem; 
 		    /*font-size: 11px;
 		    padding-top: 1px;
 		    padding-bottom: 1px;*/
@@ -170,7 +156,7 @@
     }
 
     .shopbar-button-label {
-        font-size: 0.75rem;
+        font-size: $font-size-xs;
         line-height: 1.2;
         margin-left: 0.2rem;
         color: $body-color;
