--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -21,7 +21,10 @@ $headings-line-height:          1.3;
 /*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
 $font-family-sans-serif:        'Open Sans', sans-serif;
 
-$font-size-base:                .925rem;
+$font-size-root:                14px;
+$font-size-base:                1rem;
+$font-size-sm:                  0.925rem;
+$font-size-xs:                  0.85rem;
 $line-height:                   1.8;
 $line-height-sm:                1.8;
 $line-height-lg:                1.5;
